
#==============================================================
#
#  Name: RELEASE_NOTES
#
#  Rem:  This files describes release notes for
#        the Bunch Charge Monitor IOC Application.
#
#  Auth: xx-Dec-2012, XXX         (xxx)
#  Rev:  dd-mmm-yyyy, Reviewer's Name    (USERNAME)
#--------------------------------------------------------------

R3.7.0    Ryan Reno (rreno) - 6/15/2020
          - Added support for waveform display via Stream0.
          - Added database support to control AutoRearm for stream

R3.6.2    Ryan Reno (rreno) - 5/15/2020
          - Rolled back l2Mps to R2.4.0 to work with l2MpsAsyn R2.6.0

R3.6.1    Carolina Bianchini (carolina) - 3/30/2020
	    - Adding SIOCs sioc-col1-im01, sioc-emit2-im01, sioc-spd-im01

R3.6.0    Carolina Bianchini (carolina) - 3/19/2020
	    - Upgraded the App to EPICS 7.0.3

R3.5.2    Ryan Reno (rreno) - 04/17/2020
          - Changed version of bsaDriver to 1.6.1 to fix PV names overlapping with Cu LINAC.
            sioc-gunb-fc01 and sioc-gunb-im01 run on cpu-gunb-sp01 which is not yet ready to
            move to buildroot2019 and epics 7.0.3 (3.6 release series). This release is a stopgap to
            fix the PV name conflict until the IOCs can be updated to R3.6.x

R3.5.1    Marcio Donadio (marcio) - 10/21/2019
            - Removed the temporary disabling of bsaDriver on boot.
            - Upgraded a bunch of modules to fix crashes that were happening in
              the IOCs.
            - Upgraded yaml files.

R3.5.0    Marcio Donadio (marcio) - 9/19/2019
            - Temporarily disabling bsaDriver on boot until BSA crashes are
              fixed.
            - Fixed database for correct types of ATCA registers, RW x RO, and 
              added missing register to the dictionary file.
            - Fixed typo in st.cmd.
            - Brought amcStatus.edl changes from production.
            - Added bcmFCTop.edl that was only on CVS.

R3.4.0    Marcio Donadio (marcio) - 8/21/2019